# NovelReader

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  extensions.crx
extensions/: manifest.json  test.txt
extensions/_locales/en/: messages.json
extensions/_locales/zh_CN/: messages.json
extensions/src/html/: settings.html
extensions/src/js/: background.js  db_utils.js  reader.js  settings.js
extensions/src/js/lib/: jschardet.min.js
include/: file_system_utils.h  terminal_input.h
src/: file_system_utils.cpp  main.cpp  platform_utils.cpp  terminal_input.cpp
windows/: CMakeLists.txt
windows/src/: file_system_utils.cpp  main.cpp  platform_utils.cpp  platform_utils.h
